# schedule_free

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py
examples/cifar10/: main_cifar10.py
examples/mnist/: README.md  main.py  requirements.txt
schedulefree/: __init__.py  adamw_schedulefree.py  adamw_schedulefree_closure.py  adamw_schedulefree_paper.py  adamw_schedulefree_reference.py  radam_schedulefree.py  radam_schedulefree_closure.py  sgd_schedulefree.py  sgd_schedulefree_closure.py  sgd_schedulefree_reference.py  test_schedulefree.py  wrap_schedulefree.py  wrap_schedulefree_reference.py  wrap_schedulefree_swap.py
schedulefree/algoperf/external_tuning/schedule_free_adamw/: requirements.txt  submission.py  tuning_search_space.json
schedulefree/algoperf/external_tuning/schedule_free_prodigy/: submission.py  tuning_search_space.json
schedulefree/algoperf/self_tuning/schedule_free_adamw/: submission.py
